# lidar-scan

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  QUICK_START_PLUGINS.md  README.md  build_cython.py  docker-compose.yml  install.ps1  install_pointpillars.sh  main.py  opencode.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-ml.txt  requirements.txt  run.sh  run_sim.sh  run_test.sh  swagger-docs-validation-test-plan.md  test_imports.py  verify_backend_implementation.py  verify_structure.py
.github/: pull_request_template.md
.github/workflows/: backend-cpp.yml  ci.yml  frontend.yml  opencode-merge.yml  (+2 more)
.opencode/: package-lock.json
app/: app.py  db.py
config/: data.db  lidars.json
deploy/: deploy.sh  deploy_amd.sh  deploy_arm.sh
docker/: .dockerignore  Dockerfile  Dockerfile.ci
docs/: AGENTS.md  BUILD.md  EXECUTION_FLOW.md  FLOW_CANVAS_CONNECTIONS.md  PLUGIN_GUIDE.md  README.docker.md  WEBSOCKET_TOPICS.md
scripts/: build.sh  lidar-standalone.spec  run.sh  run_sim.sh  standalone.py
setup/: Dockerfile  docker-compose.yaml  setup.sh
tests/: conftest.py  test_api_schemas.py  test_dag_meta_migration.py  test_metrics_broadcaster.py  test_metrics_endpoints.py  test_metrics_registry.py  test_node_visibility_api.py  test_node_visibility_models.py  test_node_visibility_repository.py
web/: AGENTS.md  README.md  angular.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-imports.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vitest.config.ts  vitest.setup.ts
(+1249 files in other folders)
