[project]
name = "lidar-standalone"
version = "1.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.138.0",
    "harvesters>=1.4.3",
    "httpx>=0.27.0",
    "numpy>=2.4.4",
    "open3d-cpu>=0.19.0",
    "psutil>=7.2.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.26",
    "scipy>=1.7",
    "small-gicp>=1.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.44.0",
    "wsproto>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio>=0.23.0",
]
